--- a/ui/layout/menu/TheMenuMob.module.css
+++ b/ui/layout/menu/TheMenuMob.module.css
@@ -3,7 +3,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1000;
+    z-index: var(--menu-mob-z-index);
     width: 100%;
     padding: 0 0.8rem 0.8rem;
 
